# nao-grita-

./: Makefile  README.md  angelo.py  exceptions.json  format.json  influencers-parsed.json  influencers.json  main.py  parse-text.py  pyproject.toml  rank.py  rating.py  tmp.py  transformer.py
data/: Influencers Spreadsheet (1).json  Influencers Spreadsheet (2).json  exceptions-influencers.json  influencers_enriched.json  influencers_enriched2.json  influencers_enriched3.json  influencers_enriched_robertasentiment_ptbr.json  influencers_enriched_robertasentiment_ptbr2.json  influencers_grouped_reviews.json  influencers_grouped_reviews2.json  influencers_grouped_reviews3.json  influencers_matches.json  influencers_parsed_final.json  influencers_ranked2.json  influencers_ranked3.json  input.json  tmp-struct.json
front/n-grita/: InfluencerRanking.tsx  data.ts  package-lock.json  package.json  types.ts
